minor issue fixed

--- a/projects/virava-user-management/src/lib/components/users-update/users-update.component.html
+++ b/projects/virava-user-management/src/lib/components/users-update/users-update.component.html
@@ -80,7 +80,7 @@
                 Assigned
                 {{
                   resourcePermission?.name?.charAt(0) +
-                    resourcePermission?.name?.slice(1).toLowerCase()
+                    resourcePermission?.name?.slice(1)?.toLowerCase()
                 }}s:
               </h1>
               <mat-chip-list *ngIf="resourcePermission.name">
