Fixed logged user bug & increased version

--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -48,7 +48,7 @@
           >
             <div
               class="{{ column.className }}"
-              *ngIf="column.actionsConfig.id !== item.id"
+              *ngIf="column.actionsConfig.loggedUserId !== item.id"
             >
               <button
                 *ngFor="let actionValue of column.actionsConfig"
