--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -52,6 +52,8 @@
                   {{ actionValue.loggedUserId }}
                   {{ item.id }}
                 </div>
+                <div>test</div>
+                <div>{{ actionValue }}</div>
                 <!-- 
                 <button
                   *ngIf="actionValue.loggedUserId && actionValue != item.id"
