--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -48,13 +48,6 @@
           >
             <div class="{{ column.className }}">
               <ng-template *ngFor="let actionValue of column.actionsConfig">
-                <div>
-                  {{ actionValue.loggedUserId }}
-                  {{ item.id }}
-                </div>
-                <div>test</div>
-                <div>{{ actionValue }}</div>
-                <!-- 
                 <button
                   *ngIf="actionValue.loggedUserId && actionValue != item.id"
                   mat-icon-button
@@ -62,7 +55,7 @@
                   (click)="actionValue.action(item)"
                 >
                   <mat-icon> {{ actionValue.icon }}</mat-icon>
-                </button> -->
+                </button>
               </ng-template>
             </div>
           </ng-template>
