--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -47,15 +47,14 @@
             let-item
           >
             <div class="{{ column.className }}">
-              <ng-template *ngFor="let actionValue of column.actionsConfig">
-                <button
-                  mat-icon-button
-                  matTooltip="{{ actionValue.tooltip }} "
-                  (click)="actionValue.action(item)"
-                >
-                  <mat-icon> {{ actionValue.icon }}</mat-icon>
-                </button>
-              </ng-template>
+              <button
+                *ngFor="let actionValue of column.actionsConfig"
+                mat-icon-button
+                matTooltip="{{ actionValue.tooltip }} "
+                (click)="actionValue.action(item)"
+              >
+                <mat-icon> {{ actionValue.icon }}</mat-icon>
+              </button>
             </div>
           </ng-template>
         </e-column>
