--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -47,14 +47,16 @@
             let-item
           >
             <div class="{{ column.className }}">
-              <button
-                *ngFor="let actionValue of column.actionsConfig"
-                mat-icon-button
-                matTooltip="{{ actionValue.tooltip }} "
-                (click)="actionValue.action(item)"
-              >
-                <mat-icon> {{ actionValue.icon }}</mat-icon>
-              </button>
+              <ng-container *ngFor="let actionValue of column.actionsConfig">
+                <button
+                  *ngIf="actionValue.loggedUserId === item.id"
+                  mat-icon-button
+                  matTooltip="{{ actionValue.tooltip }}"
+                  (click)="actionValue.action(item)"
+                >
+                  <mat-icon>{{ actionValue.icon }}</mat-icon>
+                </button>
+              </ng-container>
             </div>
           </ng-template>
         </e-column>
