--- a/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
+++ b/projects/virava-user-management/src/lib/components/data-grid/data-grid.component.html
@@ -49,7 +49,7 @@
             <div class="{{ column.className }}">
               <ng-container *ngFor="let actionValue of column.actionsConfig">
                 <button
-                  *ngIf="actionValue.loggedUserId === item.id"
+                  *ngIf="actionValue.loggedUserId !== item.id"
                   mat-icon-button
                   matTooltip="{{ actionValue.tooltip }}"
                   (click)="actionValue.action(item)"
