--- a/projects/virava-user-management/src/lib/components/users-update/users-update.component.scss
+++ b/projects/virava-user-management/src/lib/components/users-update/users-update.component.scss
@@ -58,3 +58,12 @@
     display: none;
   }
 }
+
+.dropdown-search-field {
+  width: 100%;
+  padding: 5px;
+ 
+  ::ng-deep.mat-form-field-wrapper {
+    padding: 0 !important;
+  }
+}
