--- a/projects/virava-user-management/src/lib/components/users-update/users-update.component.scss
+++ b/projects/virava-user-management/src/lib/components/users-update/users-update.component.scss
@@ -60,9 +60,14 @@
 }
 
 .dropdown-search-field {
+  position: sticky;
+  top: 0px;
+  left: 0px;
   width: 100%;
   padding: 5px;
- 
+  z-index: 9999;
+  background-color: #ffffff;
+
   ::ng-deep.mat-form-field-wrapper {
     padding: 0 !important;
   }
